--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
-    
+    <img src="pikachu.jpg" alt="Image descripttion" />
 </body>
 </html>
