--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <img src="pikachu.jpg" alt="Image descripttion" />
-</body>
+</body>    
 </html>
+<footer>
+    2 <p>Company: My Company</p>
+    3 <p><a href="mailto:fake@example.com">fake@example.com</a></p>
+    4
+</footer>
