--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mi Web</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
-    <img src="pikachu.jpg" alt="Image descripttion" />
+    <img src="pikachu.jpg" alt="Image description" />
+    <h1>Bienvenido a la página Web</h1>
 </body>    
 </html>
 <footer>
-    2 <p>Company: My Company</p>
-    3 <p><a href="mailto:fake@example.com">fake@example.com</a></p>
-    4
+    <p>Company: My Company</p>
+    <p><a href="mailto:fake@example.com">fake@example.com</a></p> 
 </footer>
