--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
-    <img src="pikachu.jpg" alt="Image descripttion" />
+    <img src="pikachu.jpg" alt="Imagen descripcion" />
+    <h2>Se cierra sesión</h2>
 </body>    
 </html>
 <footer>
-    2 <p>Company: My Company</p>
-    3 <p><a href="mailto:fake@example.com">fake@example.com</a></p>
-    4
+    1 <p>Company: My Company</p>
+    2 <p><a href="mailto:fake@example.com">fake@example.com</a></p>
+    3
 </footer>
